--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,49 @@
-version: '3.8'
+version: '3'
 
 services:
   # Gateway
   leare_gateway:
     build:
       context: .
-      dockerfile: Dockerfile.gateway
+      # dockerfile: Dockerfile.production
+      dockerfile: Dockerfile.dev
     ports:
       - "5555:5555"
     volumes:
       - ./logs:/logs
+      - .:/app #SOLO PARA DEV
     networks:
       - leare_network
   # auth_ms
 
   # chat_ms
+
+  chat_db:
+    image: mongo:7.0
+    volumes:
+      - ../db/leare_chat_db:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    ports:
+      - "27017:27017"
+    networks:
+      - leare_network
+
+  chat_web:
+    build:
+      context: ../leare_chat_ms
+      dockerfile: Dockerfile
+    ports:
+      - "3002:3002"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://root:password@mongo:27017/
+    depends_on:
+      - chat_db
+    networks:
+      - leare_network
 
 
   # courses_ms
@@ -42,8 +71,8 @@ services:
       - leare_network
 
 
-  #documents_ms
-  documents_rabbit:
+  #document_ms
+  document_rabbit:
     image: rabbitmq:management
     ports:
       - "5672:5672"
@@ -55,33 +84,62 @@ services:
       - leare_network
 
 
-  documents_server:
+  document_server:
     build:
-      context: ../leare_documents_ms
+      context: ../leare_document_ms
       dockerfile: Dockerfile.server
     ports:
-      - "3012:3012"
+      - "3004:3004"
     volumes:
-      - ../leare_documents_ms/temp:/temp
-      - ../leare_documents_ms/logs:/logs
+      - ../leare_document_ms/temp:/temp
+      - ../leare_document_ms/logs:/logs
     networks:
       - leare_network
 
-  documents_sidecar:
+  document_sidecar:
     build:
-      context: ../leare_documents_ms
+      context: ../leare_document_ms
       dockerfile: Dockerfile.sidecar
     volumes:
-      - ../leare_documents_ms/temp:/temp
-      - ../leare_documents_ms/logs:/logs
+      - ../leare_document_ms/temp:/temp
+      - ../leare_document_ms/logs:/logs
     networks:
       - leare_network
 
 
   # search_ms
 
+  search_db:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
+    environment:
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "discovery.type=single-node"
+      - "ELASTIC_PASSWORD=password"
+    ports:
+      - "9200:9200"
+    volumes:
+      - ../db/leare_search_db:/usr/share/elasticsearch/data
+
+  search_web:
+    build:
+      context: ../leare_search_ms
+      dockerfile: Dockerfile
+    environment:
+      - ROCKET_ADDRESS=0.0.0.0
+      - ROCKET_PORT=3005
+      - ELASTICSEARCH_URL=http://localhost:9200
+      - ES_USERNAME=elastic
+      - ES_PASSWORD=password
+    ports:
+      - "3005:3005"
+    depends_on:
+      - search_db
+
+  # ws
+
   # user_ms
-  users_db:
+  usersDb:
     image: mariadb
     volumes:
       - ../db/leare_users_db:/var/lib/mysql
@@ -102,9 +160,9 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - users_db
+      - usersDb
     environment:
-      DATABASE_URL: mysql2://root:password@users_db/my_app_development
+      DATABASE_URL: mysql2://root:password@usersDb/my_app_development
     networks:
       - leare_network
 
