--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,30 +111,41 @@ services:
 
   search_db:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.2
+    container_name: search_db
     environment:
-      - xpack.security.enabled=false
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - "discovery.type=single-node"
-      - "ELASTIC_PASSWORD=password"
-    ports:
-      - "9200:9200"
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     volumes:
-      - ../db/leare_search_db:/usr/share/elasticsearch/data
+      - esdata1:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - leare_network
 
   search_web:
     build:
-      context: ../leare_search_ms
+      context: .
       dockerfile: Dockerfile
     environment:
       - ROCKET_ADDRESS=0.0.0.0
       - ROCKET_PORT=3005
-      - ELASTICSEARCH_URL=http://localhost:9200
+      - ELASTICSEARCH_URL=http://search_db:9200
+      # - ELASTICSEARCH_URL=http://elastic:password@search_db:9200
       - ES_USERNAME=elastic
       - ES_PASSWORD=password
     ports:
       - "3005:3005"
     depends_on:
       - search_db
+    networks:
+      - leare_network
 
   # ws
 
@@ -166,7 +177,11 @@ services:
     networks:
       - leare_network
 
-
+volumes:
+  esdata1:
+    driver: local
+  esdata2:
+    driver: local
 
 
 networks:
