--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,10 @@ jobs:
       uses: google-github-actions/auth@v0
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
-        
+    
+    - name: Grant execute permission to mvnw
+      run: chmod +x mvnw
+
     - name: Build and Push Images
       env:
         GCP_REGISTRY: northamerica-northeast1-docker.pkg.dev/mystic-tempo-416400/leare
