--- a/compose.cloud.yaml
+++ b/compose.cloud.yaml
@@ -8,7 +8,7 @@ services:
       - "5555:5555"
     volumes:
       - ./logs:/logs
-      - .:/app #SOLO PARA DEV
+      # - .:/app #SOLO PARA DEV
     networks:
       - leare-network
   # auth_ms
