--- a/k8sTEST/compose.cloud.yaml
+++ b/k8sTEST/compose.cloud.yaml
@@ -7,8 +7,7 @@ services:
     ports:
       - "5555:5555"
     volumes:
-      - ./logs:/logs
-      - .:/app #SOLO PARA DEV
+      - ./logs:/app/logs
     networks:
       - leare-network
   # auth_ms
