--- a/compose.cloud.yaml
+++ b/compose.cloud.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
 # Gateway
@@ -84,6 +84,28 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: arquisoft
       RABBITMQ_DEFAULT_PASS: password
+    healthcheck:   
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q check_running"]
+      interval: 50s
+      timeout: 4s
+      retries: 5
+      start_period: 3m
+    networks:
+      - leare-network
+
+  document-db:
+    command: "-jar DynamoDBLocal.jar -port 3014"
+    image: "amazon/dynamodb-local:latest"
+    container_name: document-db
+    working_dir: /home/dynamodblocal
+    volumes:
+      - "dynamoData:/home/dynamodblocal"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s -o /dev/null -w '%{http_code}' http://localhost:3014 | grep -E '400|200'"]
+      interval: 5s
+      timeout: 1s
+      retries: 5
+      start_period: 40s
     networks:
       - leare-network
 
@@ -93,6 +115,11 @@ services:
     volumes:
       - ../leare_document_ms/temp:/temp
       - ../leare_document_ms/logs:/logs
+    ports:
+      - "3004:3004"
+    depends_on:
+      document-db:
+        condition: service_healthy
     networks:
       - leare-network
 
@@ -102,7 +129,10 @@ services:
       - ../leare_document_ms/temp:/temp
       - ../leare_document_ms/logs:/logs
     depends_on:
-      - document-rabbit
+      document-db:
+        condition: service_healthy
+      document-rabbit:
+        condition: service_healthy
     networks:
       - leare-network
 
@@ -181,6 +211,8 @@ volumes:
   esdata1:
     driver: local
   esdata2:
+    driver: local
+  dynamoData:
     driver: local
 
 
