--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   #MARK: Gateway
@@ -111,9 +111,32 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: arquisoft
       RABBITMQ_DEFAULT_PASS: password
+    healthcheck:   
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q check_running"]
+      interval: 50s
+      timeout: 4s
+      retries: 5
+      start_period: 3m
     networks:
       - leare-network
-
+  
+  document-db:
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data -port 3014"
+    image: "amazon/dynamodb-local:latest"
+    container_name: document-db
+    ports:
+      - "3014:3014"
+    volumes:
+      - "../db/leare_document_db:/home/dynamodblocal/data"
+    working_dir: /home/dynamodblocal
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s -o /dev/null -w '%{http_code}' http://localhost:3014 | grep -E '400|200'"]
+      interval: 5s
+      timeout: 1s
+      retries: 5
+      start_period: 40s
+    networks:
+      - leare-network
 
   document-server:
     build:
@@ -124,6 +147,9 @@ services:
     volumes:
       - ../leare_document_ms/temp:/temp
       - ../leare_document_ms/logs:/logs
+    # depends_on:
+    #   document-db:
+    #     condition: service_healthy
     networks:
       - leare-network
 
@@ -135,7 +161,10 @@ services:
       - ../leare_document_ms/temp:/temp
       - ../leare_document_ms/logs:/logs
     depends_on:
-      - document-rabbit
+      document-db:
+        condition: service_healthy
+      document-rabbit:
+        condition: service_healthy
     networks:
       - leare-network
 
