--- a/compose.cloud.yaml
+++ b/compose.cloud.yaml
@@ -94,12 +94,12 @@ services:
       - leare-network
 
   document-db:
-    command: "-jar DynamoDBLocal.jar -port 3014"
+    command: "-jar DynamoDBLocal.jar -sharedDb -port 3014"
     image: "amazon/dynamodb-local:latest"
     container_name: document-db
     working_dir: /home/dynamodblocal
-    volumes:
-      - "dynamoData:/home/dynamodblocal"
+    # volumes:
+    #   - "../db/leare_document_db:/home/dynamodblocal/shared-local-instance.db:rw"
     healthcheck:
       test: ["CMD-SHELL", "curl -s -o /dev/null -w '%{http_code}' http://localhost:3014 | grep -E '400|200'"]
       interval: 5s
@@ -212,7 +212,7 @@ volumes:
     driver: local
   esdata2:
     driver: local
-  dynamoData:
+  finalTest:
     driver: local
 
 
